# Clin-rec

./: .env.example  .gitignore  AUTONOMOUS_EXECUTION_CYCLE20_v1.md  CANONICAL_DOCS_INDEX_v4.md  DOD_MVP.md  Dockerfile  IMPLEMENTATION_PLAN_2026-04-28_v1.md  IMPLEMENTATION_PLAN_2026-04-28_v2.md  IMPLEMENTATION_PLAN_2026-04-28_v3.md  IMPLEMENTATION_PLAN_2026-04-28_v4.md  IMPLEMENTATION_PLAN_2026-04-29_v10.md  IMPLEMENTATION_PLAN_2026-04-29_v11.md  IMPLEMENTATION_PLAN_2026-04-29_v12.md  IMPLEMENTATION_PLAN_2026-04-29_v13.md  IMPLEMENTATION_PLAN_2026-04-29_v14.md  IMPLEMENTATION_PLAN_2026-04-29_v15.md  IMPLEMENTATION_PLAN_2026-04-29_v16.md  IMPLEMENTATION_PLAN_2026-04-29_v17.md  IMPLEMENTATION_PLAN_2026-04-29_v18.md  IMPLEMENTATION_PLAN_2026-04-29_v5.md  IMPLEMENTATION_PLAN_2026-04-29_v6.md  IMPLEMENTATION_PLAN_2026-04-29_v7.md  IMPLEMENTATION_PLAN_2026-04-29_v8.md  IMPLEMENTATION_PLAN_2026-04-29_v9.md  IMPLEMENTATION_PLAN_2026-04-30_cycle20_v2.md  IMPLEMENTATION_PLAN_2026-04-30_restart_v1.md  ISOLATION_POLICY.md  OPERATOR_RUNBOOK_PILOT_v1.md  PRD_CR_Intelligence_Platform_v1_1.md  PRD_CR_Intelligence_Platform_v1_2.md  PRD_CR_Intelligence_Platform_v1_3_kb.md  PRD_CR_Intelligence_Platform_v1_5.md  PRD_CR_Intelligence_Platform_v1_6.md  PRD_CR_Intelligence_Platform_v2_4.md  PRD_CR_Intelligence_Platform_v2_5.md  PRD_CR_Intelligence_Platform_v2_6.md  PRD_CR_Intelligence_Platform_v2_7.md  PRD_CR_Intelligence_Platform_v2_7_restart_v1.md  PRD_CR_Intelligence_Platform_v2_8.md  PRD_CR_Intelligence_Platform_v2_8_cycle20_v1.md  (+73 more)
alembic/: env.py
app/: main.py  ui_i18n.py
docs/: AUTONOMOUS_RUN_2026-04-28_101845.md  STORAGE_STAGES.md  (+22 more)
(+289 files in other folders)
