[project]
name = "cr-intelligence-platform"
version = "0.1.0"
description = "Platform for ingestion, normalization and clinical interpretation of Russian Ministry of Health clinical recommendations with explainable INN substitution matrix calculation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "celery[redis]>=5.4,<6",
    "redis>=5.0,<6",
    "boto3>=1.35,<2",
    "aioboto3>=13,<14",
    "playwright>=1.48,<2",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "pdfplumber>=0.11,<1",
    "pandas>=2.2,<3",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.12",
    "prometheus-client>=0.21,<1",
    "sentry-sdk[fastapi]>=2.0,<3",
    "streamlit>=1.39,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]
nlp = [
    "natasha>=1.6,<2",
    "spacy>=3.8,<4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
